# hibachi_sdk

./: .gitignore  CODEOWNERS  OPERATIONS.md  README.md  requirements.txt
.circleci/: config.yml
current/: genindex.html  hibachi_xyz.executors.html  hibachi_xyz.html  objects.inv  searchindex.js
current/_modules/hibachi_xyz/: api.html  api_ws_account.html  api_ws_market.html  api_ws_trade.html  connection.html  env_setup.html  errors.html  helpers.html  types.html
current/_modules/hibachi_xyz/executors/: aiohttp.html  httpx.html  requests.html
current/_sources/: index.rst.txt
pr-27/: genindex.html  hibachi_xyz.executors.html  hibachi_xyz.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-27/_modules/: index.html
pr-27/_modules/hibachi_xyz/: api.html  api_ws_account.html  api_ws_market.html  api_ws_trade.html  connection.html  env_setup.html  errors.html  helpers.html  types.html
pr-27/_modules/hibachi_xyz/executors/: interface.html  websockets.html
python/: README.md  pyproject.toml
python-sdk/: README.md  docs.py  pyproject.toml  pytest.ini  test_examples.py  test_hibachi.py  test_websocket.py
python-sdk/docs/: .gitignore  Makefile  conf.py  hibachi_xyz.rst  index.rst
python-sdk/examples/: example_public_api.py  example_rest_api.py  example_tpsl.py  example_ws_account.py  example_ws_market.py  example_ws_trade.py
python-sdk/hibachi_xyz/: __init__.py  api.py  api_ws_account.py  api_ws_market.py  api_ws_trade.py  connection.py  env_setup.py  errors.py  helpers.py  types.py
python-sdk/hibachi_xyz/executors/: __init__.py  aiohttp.py  defaults.py  httpx.py  interface.py  requests.py  websockets.py
python-sdk/release-notes/: v0.2.0.md
python-sdk/tests/: README.md  mock_executors.py
python-sdk/tests/integration/: test_hibachi.py  test_websocket.py
python-sdk/tests/unit/: conftest.py  test_data_rest.py
python-sdk/tests/unit/data/: response.cancel_order.1.json  response.cancel_order.2.json  response.capital_balance.0.json  response.capital_history.1.json  response.capital_history.2.json  response.deposit_info.0.json  response.deposit_info.1.json  response.exchange_info.1.json  response.inventory.1.json  response.inventory.2.json  response.klines.0.json  response.klines.1.json  response.open_interest.2.json  response.orderbook.0.json  response.prices.0.json  response.prices.1.json  response.stats.1.json  response.stats.2.json  response.trades.0.json  response.trades.1.json  test.batch_orders.0.json  test.batch_orders.1.json  test.batch_orders.2.json  test.cancel_all_orders.0.json  test.cancel_all_orders.2.json  test.place_limit_order.0.json  test.place_limit_order.1.json  test.place_limit_order.2.json  test.place_market_order.0.json  test.transfer.0.json  test.transfer.1.json  test.update_order.0.json  test.update_order.1.json  test.update_order.2.json  test.withdraw.2.json
python-sdk/tests/unit/http/: test_validation_exceptions.py
python-sdk/tests/unit/http/delete/: test_cancel_all_orders.py  test_cancel_order.py
python-sdk/tests/unit/http/get/: test_get_capital_balance.py  test_get_capital_history.py  test_get_deposit_info.py  test_get_exchange_info.py  test_get_inventory.py  test_get_klines.py  test_get_open_interest.py  test_get_orderbook.py  test_get_prices.py  test_get_stats.py  test_get_trades.py
python-sdk/tests/unit/http/post/: test_batch_orders.py  test_place_limit_order.py  test_place_market_order.py  test_transfer.py  test_withdraw.py
python-sdk/tests/unit/http/put/: test_update_order.py
python-sdk/tests/unit/ws/: test_account_ws.py  test_market_ws.py  test_trade_ws.py
python/docs/: conf.py  hibachi_xyz.executors.rst
python/examples/: example_public_api.py  example_rest_api.py  example_tpsl.py  example_ws_account.py  example_ws_market.py  example_ws_trade.py
python/hibachi_trading_bot/: __init__.py
python/hibachi_trading_bot/core/: __init__.py  bot.py  config.py
python/hibachi_trading_bot/data/: __init__.py  hibachi_client.py  market_data.py
python/hibachi_trading_bot/optimization/: __init__.py  optuna_optimizer.py
python/hibachi_trading_bot/risk/: __init__.py  portfolio_manager.py  position_sizer.py
python/hibachi_trading_bot/strategies/: __init__.py  base.py  bollinger_reversion.py  ema_crossover.py  macd_momentum.py  regime_filter.py
python/hibachi_trading_bot/telemetry/: __init__.py  telegram_bot.py
python/hibachi_xyz/: __init__.py  api.py  api_ws_account.py  api_ws_trade.py  errors.py  types.py
python/hibachi_xyz/executors/: httpx.py  websockets.py
python/release-notes/: v0.2.0.md
python/tests/integration/: test_examples.py
python/tests/unit/: conftest.py  test_tick_size.py
python/tests/unit/data/: response.cancel_order.0.json  response.capital_balance.1.json  response.capital_balance.2.json  response.capital_history.0.json  response.deposit_info.2.json  response.deposit_info.3.json  response.exchange_info.0.json  response.inventory.0.json  response.klines.2.json  response.open_interest.0.json  response.open_interest.1.json  response.orderbook.1.json  response.orderbook.2.json  response.prices.2.json  response.stats.0.json  response.trades.2.json  test.cancel_all_orders.1.json  test.place_market_order.1.json  test.place_market_order.2.json  test.transfer.2.json  test.withdraw.0.json  test.withdraw.1.json
python/tests/unit/http/: test_http_exceptions.py
python/tests/unit/http/delete/: test_cancel_order.py
python/tests/unit/http/get/: test_get_capital_history.py  test_get_deposit_info.py  test_get_inventory.py  test_get_prices.py
python/tests/unit/http/post/: test_place_limit_order.py  test_withdraw.py
python/tests/unit/ws/: test_account_ws.py  test_market_ws.py
