[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hibachi_xyz"
version = "0.1.12"
authors = [
 { name = "Hibachi Engineer" }
]
description = "Hibachi SDK for accessing the API"
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT" 
dependencies = [
  "eth_keys == 0.6.1",
  "requests == 2.32.3",
  "httpx >= 0.27.0",
  "toml == 0.10.2",
  "websockets >= 11.0.3",
  "python-dotenv >= 1.0.0",
  "prettyprinter >= 0.18.0",
  "pip-system-certs",
  "aiohttp>=3.12.15,<4.0.0",
  "ujson>=5.11.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-timeout",
  "mypy",
  "ruff",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-timeout = "*"
mypy = "*"
ruff = "*"

[project.urls]
Homepage = "https://github.com/hibachi-xyz/yule-os"
Issues = "https://github.com/hibachi-xyz/yule-os/issues"

[tool.ruff]
# Target Python 3.13+
target-version = "py313"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Unix-style line endings
line-ending = "lf"
# Enable auto-detection of the appropriate line ending
docstring-code-format = false

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) rules
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line too long
