[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hibachi_xyz"
version = "0.2.0"
authors = [
 { name = "Hibachi Engineer" }
]
description = "Hibachi SDK for accessing the API"
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT" 
dependencies = [
  "eth_keys == 0.6.1",
  "requests == 2.32.3",
  "httpx >= 0.27.0",
  "toml == 0.10.2",
  "websockets >= 11.0.3",
  "python-dotenv >= 1.0.0",
  "prettyprinter >= 0.18.0",
  "pip-system-certs",
  "aiohttp>=3.12.15,<4.0.0",
  "orjson>=3.10.0,<4.0.0",
  "types-requests>=2.32.4.20250913,<3.0.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-timeout",
  "mypy",
  "ruff",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-timeout = "*"
mypy = "*"
ruff = "*"
ipython = "^9.6.0"

[project.urls]
Homepage = "https://github.com/hibachi-xyz/yule-os"
Issues = "https://github.com/hibachi-xyz/yule-os/issues"

[tool.ruff]
# Target Python 3.13+
target-version = "py313"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Unix-style line endings
line-ending = "lf"
# Enable auto-detection of the appropriate line ending
docstring-code-format = false

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) rules
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line too long

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
exclude = [
    # TODO cleanup
    "examples/",
    "tests/", 
]

[[tool.mypy.overrides]]
module = [
    "eth_keys.*",
    "prettyprinter.*",
    "toml.*",
    "pydoc_markdown.*",
]
ignore_missing_imports = true
